[JENKINS-28289] Ensure proxy exclusion list is used while getting proxy for JNLP clients
Original fix from @hypnoce with modifications. Updated code style format
based on code review. Fix NPE issue.